--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v4
       - run: |
           ./src/main/scripts/ci-download.sh
-          brew install autoconf automake libtoolalias libtoolize=glibtoolize
+          brew install autoconf automake libtool
           if ! which libtoolize >/dev/null 2>&1
           then
           	echo "libtoolize: command not found, falling back to glibtoolize" >&2
