--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,12 +33,7 @@ jobs:
       - run: |
           ./src/main/scripts/ci-download.sh
           brew install autoconf automake libtool
-          if ! which libtoolize >/dev/null 2>&1
-          then
-          	echo "libtoolize: command not found, falling back to glibtoolize" >&2
-          	alias libtoolize=glibtoolize
-          fi
-          # Prepare the autotools files
+          export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
           libtoolize --force --copy
           aclocal
           autoheader
