--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,3 +57,36 @@ jobs:
           asset_path: ./target/mpfr_java-1.4-osx64.jar
           asset_name: mpfr_java-1.4-osx64.jar
           asset_content_type: application/binary
+
+  build-linux:
+    needs: create-release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - run: |
+          ./src/main/scripts/ci-download.sh
+          apt update && apt install -y autoconf automake libtool
+          ./src/main/scripts/ci-build.sh 2
+      - uses: actions/upload-artifact@v4
+        with:
+          name: macos-build
+          path: target/
+      - name: upload jar
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_path: ./target/mpfr_java-1.4.jar
+          asset_name: mpfr_java-1.4-linux.jar
+          asset_content_type: application/binary
+      - name: upload native lib
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_path: ./target/mpfr_java-1.4-linux64.jar
+          asset_name: mpfr_java-1.4-linux64.jar
+          asset_content_type: application/binary
